--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -72,6 +72,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n"
+     ]
+    }
+   ],
+   "source": [
+    "N=100\n",
+    "nb_test=10\n",
+    "test_set = DatasetUNet('training/', bound=(N-nb_test,N) ,do_flip=False,\n",
+    "                           do_prep= False,\n",
+    "                           noise=False, is_simple_noise = False, \n",
+    "                        rot = False, normalize = True)\n",
+    "test_load = tc.utils.data.DataLoader(test_set,batch_size=nb_test)\n",
+    "\n",
+    "for a,b in test_load:\n",
+    "    print('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "collapsed": true
@@ -190,7 +218,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class Testset(tc.utils.data.Dataset):\n",
@@ -495,8 +525,8 @@
     "    dataset = DatasetUNet(training_directory, bound=(0,-nb_test) ,do_flip=flip_data,\n",
     "                          do_prep= do_preprocessing,\n",
     "                          noise=True, is_simple_noise = True, rot = True, normalize = True)\n",
-    "    N = dataset.true_len()\n",
-    "    print(N)\n",
+    "    N = dataset.__len__()\n",
+    "    \n",
     "    test_set = DatasetUNet(training_directory, bound=(N-nb_test,N) ,do_flip=False,\n",
     "                           do_prep= False,\n",
     "                           noise=False, is_simple_noise = False, rot = False, normalize = True)\n",
@@ -635,7 +665,9 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -805,7 +837,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -830,40 +864,29 @@
    },
    "outputs": [],
    "source": [
-    "def create_submission_UNet(test_set, model, name_submission, do_preprocessing= False):\n",
+    "def create_submission_UNet(test_path, model, name_submission, do_preprocessing= False):\n",
     "    ''' create the submission file for U-Net.\n",
     "    \n",
     "    test_set is a list of images'''\n",
     "    \n",
     "    # preprocessing\n",
-    "    \n",
-    "    if do_preprocessing:\n",
-    "        test_set = preprocessing_for_UNet(test_set)\n",
-    "        \n",
-    "    # transform list of images in tensor \n",
-    "    print('a')\n",
-    "    test_set = from_list_to_tensor(test_set)\n",
-    "    print('a')\n",
-    "    test_set = (test_set- test_set.mean())/test_set.std()\n",
+    "    test_set = Testset(test_path, 50, do_prep = do_preprocessing, normalize=True)\n",
+    "    test_load = tc.utils.data.DataLoader(test_set, mini_batch = 10)\n",
     "    model.eval()\n",
-    "    \n",
     "    mini_batch = 10\n",
-    "    print('a')\n",
     "    N,channel,w,h = test_set.size()\n",
     "    if tc.cuda.is_available():\n",
     "        model.cuda()\n",
     "    \n",
     "    mask = tc.Tensor(N,1,w,h)\n",
-    "    batch_size=10\n",
-    "    for i in range(0,test_set.size(0),mini_batch):\n",
-    "        temp =  test_set.narrow(0,i,mini_batch)\n",
-    "        print(temp.size())\n",
+    "    for test,_ in range(0,test_set.size(0),mini_batch):\n",
+    "        test =  test_set.view(-1,10,608,608)\n",
     "        if tc.cuda.is_available():\n",
     "            tc.cuda.empty_cache()\n",
-    "            temp = temp.cuda()\n",
-    "        temp = model(temp)\n",
-    "        mask[i:i+batch_size] = temp.cpu()\n",
-    "    print('a')\n",
+    "            test = test.cuda()\n",
+    "        test = model(test)\n",
+    "        mask[i:i+batch_size] = test.cpu()\n",
+    "        \n",
     "    mask = (mask.detach().numpy() > 0.5)*1\n",
     "    list_of_names= []\n",
     "    for i in range(N):\n",
@@ -1258,7 +1281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
