--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -46,6 +46,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import gc"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -189,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -201,6 +212,7 @@
     "        self.nb_test_imgs = nb_test_imgs\n",
     "        self.normalize = normalize\n",
     "        self.do_prep = do_prep\n",
+    "        \n",
     "    def __getitem__(self,index):\n",
     "        dir_test = self.root_dir + 'test_'+str(index+1)+'/'\n",
     "        files_test = os.listdir(dir_test)\n",
@@ -215,6 +227,7 @@
     "        if self.normalize:\n",
     "            img_test = (img_test-img_test.mean())/img_test.std()\n",
     "        return img_test, original_img\n",
+    "    \n",
     "    def __len__(self):\n",
     "        return self.nb_test_imgs\n",
     "    \n",
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -419,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -483,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -626,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -713,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -755,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -773,7 +786,7 @@
     "    image = make_img_overlay(original_image, predictions)\n",
     "    \n",
     "    plt.figure(figsize=(10,10))\n",
-    "    plt.imshow(image)"
+    "    plt.imshow(image)\n"
    ]
   },
   {
@@ -784,15 +797,33 @@
    },
    "outputs": [],
    "source": [
-    "print_image_test(\"test_set_images/\", 1, model, do_prep=True)"
+    "print_image_test(\"test_set_images/\", 8, model, do_prep=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test_on_image(test_path, img_nb, model, do_prep=True):\n",
+    "    ''' take a 608 * 608 image'''\n",
+    "    dataset = Testset(test_path, 50, do_prep = do_prep, normalize=True)\n",
+    "    test_image,_ = dataset.__getitem__(img_nb)\n",
+    "    if tc.cuda.is_available():\n",
+    "        model.cuda()\n",
+    "        test_image = test_image.cuda()\n",
+    "    model.eval()\n",
+    "    test_image=test_image.view(-1,dataset.get_features(),608,608)\n",
+    "    predictions=model(test_image).cpu().detach().numpy().reshape(608,608)\n",
+    "    predictions = 1*(predictions > 0.5)\n",
+    "    return predictions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def create_submission_UNet(test_path, model, name_submission, do_preprocessing= False):\n",
@@ -801,9 +832,9 @@
     "    test_set is a list of images'''\n",
     "    \n",
     "    # preprocessing\n",
-    "    test_set = Testset(test_path, 50, do_prep = do_preprocessing, normalize=True)\n",
+    "    #test_set = Testset(test_path, 50, do_prep = do_preprocessing, normalize=True)\n",
     "    \n",
-    "    test_loader = tc.utils.data.DataLoader(test_set,batch_size=2)\n",
+    "    #test_loader = tc.utils.data.DataLoader(test_set,batch_size=2)\n",
     "    \n",
     "    \n",
     "    \n",
@@ -813,20 +844,15 @@
     "    model=model.eval()\n",
     "    tc.no_grad()\n",
     "    list_of_mask = []\n",
-    "    for test,_ in tqdm(test_loader):\n",
-    "        if tc.cuda.is_available():\n",
-    "            test = test.cuda()\n",
-    "        test = model(test.view(-1,test_set.get_features(),608,608))\n",
-    "        list_of_mask.append(test.cpu())\n",
-    "        tc.cuda.empty_cache()\n",
+    "    for i in tqdm(range(50)):\n",
+    "        list_of_mask.append(test_on_image(test_path,i, model,do_prep=True))\n",
+    "                \n",
     "        \n",
-    "        \n",
-    "    mask = tc.cat(list_of_mask, dim = 0)\n",
     "    \n",
-    "    mask = (mask.detach().numpy() > 0.5)*1\n",
+    "    #mask = (mask.detach().numpy() > 0.5)*1\n",
     "    list_of_names= []\n",
-    "    for i in range(test_set.__len__()):\n",
-    "        plt.imsave( \"prediction_\"+str(i+1)+\".png\", mask[i], cmap = matplotlib.cm.gray)\n",
+    "    for i in range(50):\n",
+    "        plt.imsave( \"prediction_\"+str(i+1)+\".png\", list_of_mask[i], cmap = matplotlib.cm.gray)\n",
     "        list_of_names.append(\"prediction_\"+str(i+1)+\".png\")\n",
     "    masks_to_submission(name_submission, *list_of_names)"
    ]
@@ -851,9 +877,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "  0%|          | 0/50 [00:00<?, ?it/s]\u001b[A\u001b[A\n",
+      "\n",
+      "  2%|▏         | 1/50 [00:01<00:52,  1.08s/it]\u001b[A\u001b[A\n",
+      "\n",
+      "  4%|▍         | 2/50 [00:02<00:51,  1.08s/it]\u001b[A\u001b[A\n",
+      "\n",
+      "  6%|▌         | 3/50 [00:03<00:50,  1.08s/it]\u001b[A\u001b[A\n",
+      "\n",
+      "  8%|▊         | 4/50 [00:04<00:49,  1.08s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 10%|█         | 5/50 [00:05<00:48,  1.09s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 12%|█▏        | 6/50 [00:06<00:47,  1.08s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 14%|█▍        | 7/50 [00:07<00:47,  1.09s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 16%|█▌        | 8/50 [00:08<00:45,  1.09s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 18%|█▊        | 9/50 [00:09<00:44,  1.09s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 20%|██        | 10/50 [00:10<00:43,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 22%|██▏       | 11/50 [00:11<00:42,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 24%|██▍       | 12/50 [00:13<00:42,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 26%|██▌       | 13/50 [00:14<00:41,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 28%|██▊       | 14/50 [00:15<00:39,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 30%|███       | 15/50 [00:16<00:38,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 32%|███▏      | 16/50 [00:17<00:37,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 34%|███▍      | 17/50 [00:18<00:36,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 36%|███▌      | 18/50 [00:19<00:35,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 38%|███▊      | 19/50 [00:20<00:34,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 40%|████      | 20/50 [00:21<00:33,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 42%|████▏     | 21/50 [00:23<00:32,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 44%|████▍     | 22/50 [00:24<00:30,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 46%|████▌     | 23/50 [00:25<00:29,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 48%|████▊     | 24/50 [00:26<00:28,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 50%|█████     | 25/50 [00:27<00:27,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 52%|█████▏    | 26/50 [00:28<00:26,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 54%|█████▍    | 27/50 [00:29<00:25,  1.10s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 56%|█████▌    | 28/50 [00:30<00:24,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 58%|█████▊    | 29/50 [00:31<00:23,  1.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 60%|██████    | 30/50 [00:33<00:22,  1.12s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 62%|██████▏   | 31/50 [00:35<00:27,  1.45s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 64%|██████▍   | 32/50 [00:38<00:33,  1.87s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 66%|██████▌   | 33/50 [00:40<00:36,  2.13s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 68%|██████▊   | 34/50 [00:42<00:31,  1.97s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 70%|███████   | 35/50 [00:43<00:25,  1.71s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 72%|███████▏  | 36/50 [00:44<00:21,  1.53s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 74%|███████▍  | 37/50 [00:45<00:18,  1.40s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 76%|███████▌  | 38/50 [00:46<00:15,  1.31s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 78%|███████▊  | 39/50 [00:48<00:13,  1.25s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 80%|████████  | 40/50 [00:49<00:12,  1.21s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 82%|████████▏ | 41/50 [00:50<00:10,  1.18s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 84%|████████▍ | 42/50 [00:51<00:09,  1.17s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 86%|████████▌ | 43/50 [00:54<00:11,  1.60s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 88%|████████▊ | 44/50 [00:56<00:11,  1.94s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 90%|█████████ | 45/50 [00:59<00:10,  2.11s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 92%|█████████▏| 46/50 [01:00<00:07,  1.82s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 94%|█████████▍| 47/50 [01:01<00:04,  1.61s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 96%|█████████▌| 48/50 [01:02<00:02,  1.46s/it]\u001b[A\u001b[A\n",
+      "\n",
+      " 98%|█████████▊| 49/50 [01:03<00:01,  1.35s/it]\u001b[A\u001b[A\n",
+      "\n",
+      "100%|██████████| 50/50 [01:04<00:00,  1.27s/it]\u001b[A\u001b[A\n",
+      "\n",
+      "\u001b[A\u001b[A"
+     ]
+    }
+   ],
    "source": [
     "create_submission_UNet(\"test_set_images/\", model, 'third_submission.csv', do_preprocessing= True)"
    ]
@@ -861,7 +999,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "? tc.no_grad"
