--- a/runRidgeCV.ipynb
+++ b/runRidgeCV.ipynb
@@ -28,9 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Settings\n",
@@ -56,66 +54,194 @@
     "kf=modsel.KFold(n_splits=k_fold,shuffle=True)\n",
     "kf.get_n_splits(imgs)\n",
     "lambdas=np.logspace(-5,-3,3) # 1/lambda\n",
-    "\n",
-    "mean_f1=np.zeros(lambdas.size)\n",
+    "thresh=np.linspace(0.3,0.8,11)\n",
+    "shape=(lambdas.shape[0],thres.shape[0])\n",
+    "mean_f1=np.zeros(shape)\n",
     "\n",
     "for id_lam,lam in enumerate(lambdas):\n",
-    "    nb_f1_te = np.zeros(k_fold)\n",
-    "    for ind,[train_id,test_id] in enumerate(kf.split(imgs)):\n",
-    "        im_tr=[imgs[idx] for idx in train_id]\n",
-    "        im_te=[imgs[idx] for idx in test_id]\n",
-    "        gt_tr=[gt_imgs[idx] for idx in train_id]\n",
-    "        gt_te=[gt_imgs[idx] for idx in test_id]\n",
-    "        \n",
-    "        im_tr,gt_tr = rotation(im_tr,gt_tr)\n",
-    "        im_tr,gt_tr = flip(im_tr,gt_tr)\n",
-    "        im_tr=[add_features(im_tr[i]) for i in range(len(im_tr))]\n",
-    "        im_te=[add_features(im_te[i]) for i in range(len(im_te))]\n",
+    "    for id_t,t in enumerate(thresh):\n",
+    "        nb_f1_te = np.zeros(k_fold)\n",
+    "        for ind,[train_id,test_id] in enumerate(kf.split(imgs)):\n",
+    "            im_tr=[imgs[idx] for idx in train_id]\n",
+    "            im_te=[imgs[idx] for idx in test_id]\n",
+    "            gt_tr=[gt_imgs[idx] for idx in train_id]\n",
+    "            gt_te=[gt_imgs[idx] for idx in test_id]\n",
     "\n",
-    "        \n",
-    "        img_patches_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
-    "        img_patches_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
-    "        gt_patches_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
-    "        gt_patches_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
-    "        \n",
-    "        im_patches_tr = np.asarray([img_patches_tr[i][j] \n",
-    "                          for i in range(len(img_patches_tr)) \n",
-    "                          for j in range(len(img_patches_tr[i]))])\n",
-    "        im_patches_te = np.asarray([img_patches_te[i][j] \n",
-    "                          for i in range(len(img_patches_te)) \n",
-    "                          for j in range(len(img_patches_te[i]))])\n",
-    "        gt_patches_tr =  np.asarray([gt_patches_tr[i][j] \n",
-    "                          for i in range(len(gt_patches_tr)) \n",
-    "                          for j in range(len(gt_patches_tr[i]))])\n",
-    "        gt_patches_te =  np.asarray([gt_patches_te[i][j] \n",
-    "                          for i in range(len(gt_patches_te)) \n",
-    "                          for j in range(len(gt_patches_te[i]))])\n",
-    "        \n",
-    "        im_patches_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_patches_tr))]\n",
-    "        im_patches_te=[extract_features(im_patches_te[i]) for i in range(len(im_patches_te))]\n",
+    "            im_tr,gt_tr = rotation(im_tr,gt_tr)\n",
+    "            im_tr,gt_tr = flip(im_tr,gt_tr)\n",
+    "            im_tr=[add_features(im_tr[i]) for i in range(len(im_tr))]\n",
+    "            im_te=[add_features(im_te[i]) for i in range(len(im_te))]\n",
     "\n",
-    "        X_tr = np.asarray([poly_features(im_patches_tr[i],deg) for i in range(len(im_patches_tr))])\n",
-    "        Y_tr = np.asarray([value_to_class(np.mean(gt_patches_tr[i])) for i in range(len(gt_patches_tr))])\n",
-    "        \n",
-    "        X_te = np.asarray([poly_features(im_patches_te[i],deg) for i in range(len(im_patches_te))])\n",
-    "        Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
-    "        \n",
-    "        ridgereg = linear_model.Ridge(alpha=lam, normalize=True)\n",
-    "        ridgereg.fit(X_tr, Y_tr)\n",
     "\n",
-    "        Z_te = ridgereg.predict(X_te)\n",
-    "        Z_te=1*(Z_te>0.5)\n",
+    "            img_patches_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
+    "            img_patches_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
+    "            gt_patches_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
+    "            gt_patches_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
     "\n",
-    "        Z_pp=[]\n",
-    "        for i in range(len(gt_patches_te)):\n",
-    "            Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3,25)\n",
-    "            \n",
-    "        nb_f1_te[ind]=compute_F1(Y_te, Z_pp)\n",
+    "            im_patches_tr = np.asarray([img_patches_tr[i][j] \n",
+    "                              for i in range(len(img_patches_tr)) \n",
+    "                              for j in range(len(img_patches_tr[i]))])\n",
+    "            im_patches_te = np.asarray([img_patches_te[i][j] \n",
+    "                              for i in range(len(img_patches_te)) \n",
+    "                              for j in range(len(img_patches_te[i]))])\n",
+    "            gt_patches_tr =  np.asarray([gt_patches_tr[i][j] \n",
+    "                              for i in range(len(gt_patches_tr)) \n",
+    "                              for j in range(len(gt_patches_tr[i]))])\n",
+    "            gt_patches_te =  np.asarray([gt_patches_te[i][j] \n",
+    "                              for i in range(len(gt_patches_te)) \n",
+    "                              for j in range(len(gt_patches_te[i]))])\n",
+    "\n",
+    "            im_patches_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_patches_tr))]\n",
+    "            im_patches_te=[extract_features(im_patches_te[i]) for i in range(len(im_patches_te))]\n",
+    "\n",
+    "            X_tr = np.asarray([poly_features(im_patches_tr[i],deg) for i in range(len(im_patches_tr))])\n",
+    "            Y_tr = np.asarray([value_to_class(np.mean(gt_patches_tr[i])) for i in range(len(gt_patches_tr))])\n",
+    "\n",
+    "            X_te = np.asarray([poly_features(im_patches_te[i],deg) for i in range(len(im_patches_te))])\n",
+    "            Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
+    "\n",
+    "            ridgereg = linear_model.Ridge(alpha=lam, normalize=True)\n",
+    "            ridgereg.fit(X_tr, Y_tr)\n",
+    "\n",
+    "            Z_te = ridgereg.predict(X_te)\n",
+    "            Z_te=1*(Z_te>0.5)\n",
+    "\n",
+    "            Z_pp=[]\n",
+    "            for i in range(len(gt_patches_te)):\n",
+    "                Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3,25)\n",
+    "\n",
+    "            nb_f1_te[ind]=compute_F1(Y_te, Z_pp)\n",
     "        \n",
-    "    mean_f1[id_lam]=nb_f1_te.mean()\n",
+    "    mean_f1[id_lam,id_t]=nb_f1_te.mean()\n",
     "    \n",
-    "\n",
-    "best_lambda=lambdas[np.argmax(mean_f1)]"
+    "best=np.max(mean_f1)\n",
+    "ids=np.where(mean_f1==best)\n",
+    "best_lambda=lambdas[ids[0][0]]\n",
+    "best_thresh=thresh[ids[1][0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.57144547,  0.57309887,  0.57266102])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean_f1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "thres=np.linspace(0.3,0.8,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zers=np.zeros((thres.shape[0],lambdas.shape[0]))\n",
+    "np.argmax(zers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "thres.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 2, 3],\n",
+       "       [4, 5, 6]])"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix=np.asarray([[1,2,3],[4,5,6]])\n",
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ids=np.where(matrix==3)\n",
+    "ids[1][0]"
    ]
   },
   {
