--- a/runRidgeCV.ipynb
+++ b/runRidgeCV.ipynb
@@ -42,7 +42,7 @@
     "files = os.listdir(image_dir)\n",
     "\n",
     "#n=len(files)\n",
-    "n=6\n",
+    "n=4\n",
     "k_fold=2 #number of folds in the k-fold cross-validation\n",
     "\n",
     "imgs = [load_image(image_dir + files[i]) for i in range(n)]\n",
@@ -53,8 +53,8 @@
     "\n",
     "kf=modsel.KFold(n_splits=k_fold,shuffle=True)\n",
     "kf.get_n_splits(imgs)\n",
-    "lambdas=np.logspace(-5,-3,3) # 1/lambda\n",
-    "thresh=np.linspace(0.3,0.8,11)\n",
+    "lambdas=np.logspace(-3,-1,3) # 1/lambda\n",
+    "thresh=np.linspace(0.4,0.7,2)\n",
     "shape=(lambdas.shape[0],thres.shape[0])\n",
     "mean_f1=np.zeros(shape)\n",
     "\n",
@@ -104,7 +104,7 @@
     "            ridgereg.fit(X_tr, Y_tr)\n",
     "\n",
     "            Z_te = ridgereg.predict(X_te)\n",
-    "            Z_te=1*(Z_te>0.5)\n",
+    "            Z_te=1*(Z_te>t)\n",
     "\n",
     "            Z_pp=[]\n",
     "            for i in range(len(gt_patches_te)):\n",
@@ -122,27 +122,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.59871494085621557"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "best"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.57144547,  0.57309887,  0.57266102])"
+       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.55512792],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.56459979],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.59871494]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
