--- a/ML_notebook_Diego.ipynb
+++ b/ML_notebook_Diego.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +85,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "            image=np.concatenate((image,laplacian_image,sobel,segment),axis = 2)\n",
     "        image,gt_image=[image],[gt_image]\n",
     "        if self.rot:\n",
-    "            image,gt_image = rotation(image,gt_image)\n",
+    "            image,gt_image = rotation(image,gt_image, diagonal = True)\n",
     "        if self.do_flip:\n",
     "            image,gt_image = flip(image,gt_image)\n",
     "            \n",
@@ -803,7 +803,9 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def test_on_image(test_path, img_nb, model, do_prep=True):\n",
@@ -823,7 +825,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def create_submission_UNet(test_path, model, name_submission, do_preprocessing= False):\n",
@@ -878,7 +882,9 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -1355,7 +1361,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
