--- a/runRidgeCV_new.ipynb
+++ b/runRidgeCV_new.ipynb
@@ -27,6 +27,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def post_processing(label,threshold,size_min,verbarg,horbarg,size_image):\n",
+    "    label = complete_lines(label,threshold)\n",
+    "    label = remove_isolated_connected_component(label,size_min)\n",
+    "    label = clean_garbage_vert(label,verbarg,size_image)\n",
+    "    label = clean_garbage_hor(label,horbarg,size_image)\n",
+    "    label = remove_isolated_connected_component(label,size_min)\n",
+    "    #label = complete_semilines(label,0.85, size_image)\n",
+    "    return label"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -53,9 +71,9 @@
     "\n",
     "kf=modsel.KFold(n_splits=k_fold,shuffle=True)\n",
     "kf.get_n_splits(imgs)\n",
-    "lambdas=np.logspace(-3,-1,3) # 1/lambda\n",
-    "thresh=np.linspace(0.4,0.7,2)\n",
-    "shape=(lambdas.shape[0],thres.shape[0])\n",
+    "lambdas=np.logspace(-8,-5,3) # 1/lambda\n",
+    "thresh=np.linspace(0.35,0.55,3)\n",
+    "shape=(lambdas.shape[0],thresh.shape[0])\n",
     "mean_f1=np.zeros(shape)\n",
     "\n",
     "for id_lam,lam in enumerate(lambdas):\n",
@@ -73,46 +91,46 @@
     "            im_te=[add_features(im_te[i]) for i in range(len(im_te))]\n",
     "\n",
     "\n",
-    "            img_patches_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
-    "            img_patches_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
-    "            gt_patches_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
-    "            gt_patches_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
+    "            im_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
+    "            im_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
+    "            gt_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
+    "            gt_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
     "\n",
-    "            im_patches_tr = np.asarray([img_patches_tr[i][j] \n",
-    "                              for i in range(len(img_patches_tr)) \n",
-    "                              for j in range(len(img_patches_tr[i]))])\n",
-    "            im_patches_te = np.asarray([img_patches_te[i][j] \n",
-    "                              for i in range(len(img_patches_te)) \n",
-    "                              for j in range(len(img_patches_te[i]))])\n",
-    "            gt_patches_tr =  np.asarray([gt_patches_tr[i][j] \n",
-    "                              for i in range(len(gt_patches_tr)) \n",
-    "                              for j in range(len(gt_patches_tr[i]))])\n",
-    "            gt_patches_te =  np.asarray([gt_patches_te[i][j] \n",
-    "                              for i in range(len(gt_patches_te)) \n",
-    "                              for j in range(len(gt_patches_te[i]))])\n",
+    "            im_tr = np.asarray([im_tr[i][j] \n",
+    "                              for i in range(len(im_tr)) \n",
+    "                              for j in range(len(im_tr[i]))])\n",
+    "            im_te = np.asarray([im_te[i][j] \n",
+    "                              for i in range(len(im_te)) \n",
+    "                              for j in range(len(im_te[i]))])\n",
+    "            gt_tr =  np.asarray([gt_tr[i][j] \n",
+    "                              for i in range(len(gt_tr)) \n",
+    "                              for j in range(len(gt_tr[i]))])\n",
+    "            gt_te =  np.asarray([gt_te[i][j] \n",
+    "                              for i in range(len(gt_te)) \n",
+    "                              for j in range(len(gt_te[i]))])\n",
     "\n",
-    "            im_patches_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_patches_tr))]\n",
-    "            im_patches_te=[extract_features(im_patches_te[i]) for i in range(len(im_patches_te))]\n",
+    "            im_patches_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_tr))]\n",
+    "            im_patches_te=[extract_features(im_patches_te[i]) for i in range(len(im_te))]\n",
     "\n",
-    "            X_tr = np.asarray([poly_features(im_patches_tr[i],deg) for i in range(len(im_patches_tr))])\n",
-    "            Y_tr = np.asarray([value_to_class(np.mean(gt_patches_tr[i])) for i in range(len(gt_patches_tr))])\n",
+    "            im_tr = np.asarray([poly_features(im_tr[i],deg) for i in range(len(im_tr))])\n",
+    "            gt_tr = np.asarray([value_to_class(np.mean(gt_tr[i])) for i in range(len(gt_tr))])\n",
     "\n",
-    "            X_te = np.asarray([poly_features(im_patches_te[i],deg) for i in range(len(im_patches_te))])\n",
-    "            Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
+    "            im_te = np.asarray([poly_features(im_te[i],deg) for i in range(len(im_te))])\n",
+    "            gt_te = np.asarray([value_to_class(np.mean(gt_te[i])) for i in range(len(gt_te))])\n",
     "\n",
     "            ridgereg = linear_model.Ridge(alpha=lam, normalize=True)\n",
-    "            ridgereg.fit(X_tr, Y_tr)\n",
+    "            ridgereg.fit(im_tr, gt_tr)\n",
     "\n",
-    "            Z_te = ridgereg.predict(X_te)\n",
+    "            Z_te = ridgereg.predict(im_te)\n",
     "            Z_te=1*(Z_te>t)\n",
     "\n",
     "            Z_pp=[]\n",
-    "            for i in range(len(gt_patches_te)):\n",
+    "            for i in range(len(gt_te)):\n",
     "                Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3,25)\n",
     "\n",
-    "            nb_f1_te[ind]=compute_F1(Y_te, Z_pp)\n",
+    "            nb_f1_te[ind]=compute_F1(gt_te, Z_pp)\n",
     "        \n",
-    "    mean_f1[id_lam,id_t]=nb_f1_te.mean()\n",
+    "        mean_f1[id_lam,id_t]=nb_f1_te.mean()\n",
     "    \n",
     "best=np.max(mean_f1)\n",
     "ids=np.where(mean_f1==best)\n",
@@ -122,16 +140,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.59871494085621557"
+       "0.71569148434997265"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,24 +160,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.55512792],\n",
-       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.56459979],\n",
-       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
-       "         0.59871494]])"
+       "array([[ 0.66933381,  0.67223512,  0.5618237 ,  0.41963531,  0.3253012 ],\n",
+       "       [ 0.71569148,  0.68196733,  0.53480782,  0.36928817,  0.31299105],\n",
+       "       [ 0.70834749,  0.67044995,  0.446406  ,  0.32625995,  0.24066024]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
