--- a/Notebook_NewNet.ipynb
+++ b/Notebook_NewNet.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -21,10 +19,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn.functional as F\n",
@@ -34,7 +30,7 @@
     "from torch.utils.data import TensorDataset\n",
     "from helpers_img import *\n",
     "from NeuralNets import *\n",
-    "from training_NN import *\n",
+    "#from training_NN import *\n",
     "from preprocessing import *"
    ]
   },
@@ -48,18 +44,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -73,9 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DeepNet(tc.nn.Module):\n",
@@ -89,7 +79,7 @@
     "        self.pool2 = tc.nn.MaxPool2d(kernel_size = (2,2))\n",
     "        self.drop2=tc.nn.Dropout(dropout)\n",
     "        self.batch12=tc.nn.BatchNorm2d(16)\n",
-    "        self.conv3=tc.nn.Conv2d(16,31,kernel_size=(3,3))\n",
+    "        self.conv3=tc.nn.Conv2d(16,32,kernel_size=(3,3))\n",
     "        self.pool3= tc.nn.MaxPool2d(kernel_size = (2,1))\n",
     "        self.drop3=tc.nn.Dropout(dropout)\n",
     "        self.batch12=tc.nn.BatchNorm2d(32)\n",
@@ -121,10 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "? tc.nn.MaxPool2d"
@@ -132,10 +120,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def img_crop_mod(im, w, h):\n",
@@ -155,10 +141,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
     "class DatasetDeepNet(Dataset):\n",
@@ -179,7 +163,6 @@
     "            self.flip_len=len(self.files)\n",
     "            self.files= [*self.files*2]\n",
     "        \n",
-    "                \n",
     "        \n",
     "    def __len__(self):\n",
     "        return len(self.files)\n",
@@ -194,8 +177,8 @@
     "        \n",
     "        i = index//self.initial_len\n",
     "        image,gt_image = image[i],gt_image[i]\n",
-    "        add_border(image,432)\n",
-    "        train_sub_images = [img_crop_mod(image, 40, 40)]\n",
+    "        image = add_border(image,432)\n",
+    "        train_sub_images = [img_crop_mod(image, 16, 16)]\n",
     "        train_mask_label = [img_crop(gt_image,16,16)]\n",
     "        train_mask_label = from_mask_to_vector(train_mask_label,0.3)\n",
     "        train_sub_images = transform_subIMG_to_Tensor(train_sub_images)\n",
@@ -208,18 +191,17 @@
     "                new_indices= np.random.permutation(len(train_mask_label))\n",
     "                train_sub_images=train_sub_images[new_indices]\n",
     "                train_mask_label=train_mask_label[new_indices]\n",
+    "            \n",
     "        return train_sub_images, train_mask_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 42,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def train_model_Adam_v2( model, dataset, max_epochs, lr, mini_batch_size, w=40, h=40, features=3, threshold=0.01):\n",
+    "def train_model_Adam_v2( model, dataset, max_epochs, lr, mini_batch_size, w=48, h=48, features=3, threshold=0.01):\n",
     "    '''train the Neural Net using Adam as optimizer and an binary cross entropy loss'''\n",
     "    #optimizer=tc.optim.SGD(model.parameters(),lr)\n",
     "    train_loader = DataLoader(dataset,batch_size=mini_batch_size)\n",
@@ -229,7 +211,7 @@
     "    training_errors = []\n",
     "    if tc.cuda.is_available():\n",
     "        model.cuda()\n",
-    "        \n",
+    "        criterion.cuda()\n",
     "    \n",
     "    for epoch in tqdm(range(max_epochs)):\n",
     "        model.is_training=True\n",
@@ -237,11 +219,11 @@
     "    \n",
     "        for train_data,label in train_loader:\n",
     "            train_data = train_data.view(-1,features,w,h)\n",
-    "            label = label.view(-1,1)\n",
+    "            label = label.view(-1,1).type(tc.FloatTensor)\n",
     "            if tc.cuda.is_available():\n",
     "                train_data = train_data.cuda()\n",
     "                label = label.cuda()\n",
-    "            output= model(train_data)\n",
+    "            output= model(train_data).view(-1,1)\n",
     "            #print(output,tc.LongTensor(np.array([1*label[i:i+mini_batch_size]]).reshape(-1,1)))\n",
     "            loss= criterion(output,label)\n",
     "            model.zero_grad()\n",
@@ -249,7 +231,7 @@
     "            optimizer.step()\n",
     "        losses.append(loss)\n",
     "        # compute training error\n",
-    "        model.is_training=False\n",
+    "        '''\n",
     "        model.eval()\n",
     "        test = model(train_data)\n",
     "        test = test.cpu()\n",
@@ -267,7 +249,7 @@
     "    plt.xlabel('epoch')\n",
     "    plt.ylabel('training_errors')\n",
     "    plt.show()\n",
-    "    \n",
+    "    '''\n",
     "    plt.figure()\n",
     "    plt.plot(np.arange(epoch+1)+1,losses)\n",
     "    plt.xlabel('epoch')\n",
@@ -280,10 +262,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def trainDeepNet(root_dir, max_epochs, lr, mini_batch_size, dropout=0, model = None):\n",
@@ -299,16 +279,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "  0%|          | 0/15 [00:00<?, ?it/s]"
+      "\n",
+      "  0%|                                                   | 0/15 [00:00<?, ?it/s]\n",
+      "  7%|██▋                                     | 1/15 [07:40<1:47:26, 460.44s/it]\n",
+      " 13%|█████▎                                  | 2/15 [15:18<1:39:37, 459.83s/it]\n",
+      " 20%|████████                                | 3/15 [23:34<1:34:06, 470.52s/it]"
      ]
     }
    ],
@@ -316,16 +297,14 @@
     " root_dir = 'training/'\n",
     "max_epochs = 15\n",
     "lr = 1e-4\n",
-    "mini_batch_size = 10\n",
+    "mini_batch_size = 1\n",
     "model = trainDeepNet(root_dir, max_epochs, lr, mini_batch_size, model = None)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -346,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
