--- a/updateRidge.ipynb
+++ b/updateRidge.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -51,10 +51,17 @@
      "output_type": "stream",
      "text": [
       "32\n",
+      "[array([0, 2]), array([1, 3])]\n",
+      "[array([1, 3]), array([0, 2])]\n",
       "lambda: 0\n",
       "thresh: 0\n",
       "here\n",
-      "here\n"
+      "[0 2]\n",
+      "[1 3]\n",
+      "0.879256965944\n",
+      "here\n",
+      "[1 3]\n",
+      "[0 2]\n"
      ]
     }
    ],
@@ -93,38 +100,53 @@
     "shape=(lambdas.shape[0],thresh.shape[0])\n",
     "mean_f1=np.zeros(shape)\n",
     "\n",
+    "#for (train_id,test_id) in splits:\n",
+    "trains=[]\n",
+    "tests=[]\n",
+    "for (train_id,test_id) in splits:\n",
+    "    trains.append(train_id)\n",
+    "    tests.append(test_id)\n",
+    "    \n",
+    "print(trains)\n",
+    "print(tests)\n",
+    "\n",
     "for id_lam,lam in enumerate(lambdas):\n",
     "    print('lambda: '+str(id_lam))\n",
     "    for id_t,t in enumerate(thresh):\n",
     "        print('thresh: '+str(id_t))\n",
     "        nb_f1_te = np.zeros(k_fold)\n",
-    "        for ind,(train_id,test_id) in enumerate(splits):\n",
+    "        ind=0\n",
+    "        #for (train_id,test_id) in splits:\n",
+    "        for train,test in zip(trains,tests):\n",
+    "            print('here')\n",
+    "            print(train)\n",
+    "            print(test)\n",
     "            im_tr=[ims[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
     "            im_te=[ims[idx] for idx in test_id]\n",
     "            gt_tr=[gt_ims[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
     "            gt_te=[gt_ims[idx] for idx in test_id]\n",
-    "\n",
+    "            \n",
     "            im_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
     "            im_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
     "            gt_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
     "            gt_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
-    "\n",
+    "            \n",
     "            im_tr = np.asarray([im_tr[i][j] \n",
     "                              for i in range(len(im_tr)) \n",
     "                              for j in range(len(im_tr[i]))])\n",
     "            im_te = np.asarray([im_te[i][j] \n",
     "                              for i in range(len(im_te)) \n",
     "                              for j in range(len(im_te[i]))])\n",
-    "            gt_tr =  np.asarray([gt_tr[i][j] \n",
+    "            gt_tr =  np.asarray([gt_tr[i][j]\n",
     "                              for i in range(len(gt_tr)) \n",
     "                              for j in range(len(gt_tr[i]))])\n",
     "            gt_te =  np.asarray([gt_te[i][j] \n",
     "                              for i in range(len(gt_te)) \n",
     "                              for j in range(len(gt_te[i]))])\n",
-    "\n",
+    "            \n",
     "            im_tr=[extract_features(im_tr[i]) for i in range(len(im_tr))]\n",
     "            im_te=[extract_features(im_te[i]) for i in range(len(im_te))]\n",
-    "\n",
+    "            \n",
     "            im_tr = np.asarray([poly_features(im_tr[i],deg) for i in range(len(im_tr))])\n",
     "            gt_tr = np.asarray([value_to_class(np.mean(gt_tr[i])) for i in range(len(gt_tr))])\n",
     "\n",
@@ -136,12 +158,13 @@
     "\n",
     "            Z_te = ridgereg.predict(im_te)\n",
     "            Z_te=1*(Z_te>t)\n",
-    "\n",
     "            Z_pp=[]\n",
     "            for i in range(len(gt_te)):\n",
     "                Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3,25)\n",
     "\n",
     "            nb_f1_te[ind]=compute_F1(gt_te, Z_pp)\n",
+    "            print(nb_f1_te[ind])\n",
+    "            ind=ind+1\n",
     "        \n",
     "        mean_f1[id_lam,id_t]=nb_f1_te.mean()\n",
     "    \n",
@@ -153,42 +176,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "best"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.],\n",
-       "       [ 0.,  0.,  0.]])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mean_f1"
    ]
