--- a/updateRidge.ipynb
+++ b/updateRidge.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -58,7 +58,7 @@
       "here\n",
       "[0 2]\n",
       "[1 3]\n",
-      "0.879256965944\n",
+      "0.72275862069\n",
       "here\n",
       "[1 3]\n",
       "[0 2]\n"
@@ -121,10 +121,10 @@
     "            print('here')\n",
     "            print(train)\n",
     "            print(test)\n",
-    "            im_tr=[ims[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
-    "            im_te=[ims[idx] for idx in test_id]\n",
-    "            gt_tr=[gt_ims[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
-    "            gt_te=[gt_ims[idx] for idx in test_id]\n",
+    "            im_tr=[ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
+    "            im_te=[ims[idx] for idx in test]\n",
+    "            gt_tr=[gt_ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
+    "            gt_te=[gt_ims[idx] for idx in test]\n",
     "            \n",
     "            im_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
     "            im_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
