--- a/updateLogit.ipynb
+++ b/updateLogit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,16 +27,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def post_processing(label,threshold,size_min,verbarg,horbarg,size_image):\n",
+    "    label = complete_lines(label,threshold)\n",
+    "    label = remove_isolated_connected_component(label,size_min)\n",
+    "    label = clean_garbage_vert(label,verbarg,size_image)\n",
+    "    label = clean_garbage_hor(label,horbarg,size_image)\n",
+    "    label = remove_isolated_connected_component(label,size_min)\n",
+    "    #label = complete_semilines(label,0.85, size_image)\n",
+    "    return label"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "32\n",
-      "lambda: 0\n",
-      "[0 2]\n"
+     "ename": "TypeError",
+     "evalue": "'int' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-583ddde719f6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0mtrains\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0mtests\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtrain_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtest_id\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32min\u001b[0m \u001b[0msplits\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m     \u001b[0mtrains\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     \u001b[0mtests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_id\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
      ]
     }
    ],
@@ -62,63 +82,74 @@
     "np.random.seed(seed)\n",
     "\n",
     "kf=modsel.KFold(n_splits=k_fold,shuffle=True)\n",
-    "kf.get_n_splits(ims)\n",
+    "skf.get_n_splits(ims)\n",
     "lambdas=np.logspace(0,8,15) # 1/lambda\n",
     "\n",
     "mean_f1=np.zeros(lambdas.size)\n",
     "\n",
+    "trains=[]\n",
+    "tests=[]\n",
+    "for (train_id,test_id) in splits:\n",
+    "    trains.append(train_id)\n",
+    "    tests.append(test_id)\n",
+    "    \n",
+    "print(trains)\n",
+    "print(tests)\n",
+    "\n",
     "ims=[add_features(ims[i]) for i in range(len(ims))]\n",
-    "imgs,gt_imgs = rotation(ims,gt_ims)\n",
-    "imgs,gt_imgs = flip(imgs,gt_imgs)\n",
-    "print(len(imgs))\n",
+    "ims,gt_ims = rotation(ims,gt_ims)\n",
+    "ims,gt_ims = flip(ims,gt_ims)\n",
+    "print(len(ims))\n",
     "\n",
     "for id_lam,lam in enumerate(lambdas):\n",
     "    print('lambda: '+str(id_lam))\n",
     "    nb_f1_te = np.zeros(k_fold)\n",
-    "    for ind,[train_id,test_id] in enumerate(kf.split(ims)):\n",
-    "        print(train_id)\n",
-    "        im_tr=[imgs[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
-    "        im_te=[imgs[idx] for idx in test_id]\n",
-    "        gt_tr=[gt_imgs[idx+n*k] for idx in train_id for k in np.arange(0,8)]\n",
-    "        gt_te=[gt_imgs[idx] for idx in test_id]\n",
+    "    for train,test in zip(trains,tests):\n",
+    "        print('here')\n",
+    "        print(train)\n",
+    "        print(test)\n",
+    "        im_tr=[ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
+    "        im_te=[ims[idx] for idx in test]\n",
+    "        gt_tr=[gt_ims[idx+n*k] for idx in train for k in np.arange(0,8)]\n",
+    "        gt_te=[gt_ims[idx] for idx in test]\n",
     "        \n",
-    "        img_patches_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
-    "        img_patches_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
-    "        gt_patches_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
-    "        gt_patches_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
+    "        im_tr = [img_crop(im_tr[i], patch_size, patch_size) for i in range(len(im_tr))]\n",
+    "        im_te = [img_crop(im_te[i], patch_size, patch_size) for i in range(len(im_te))]\n",
+    "        gt_tr = [img_crop(gt_tr[i], patch_size, patch_size) for i in range(len(gt_tr))]\n",
+    "        gt_te = [img_crop(gt_te[i], patch_size, patch_size) for i in range(len(gt_te))]\n",
     "        \n",
-    "        im_patches_tr = np.asarray([img_patches_tr[i][j] \n",
-    "                          for i in range(len(img_patches_tr)) \n",
-    "                          for j in range(len(img_patches_tr[i]))])\n",
-    "        im_patches_te = np.asarray([img_patches_te[i][j] \n",
-    "                          for i in range(len(img_patches_te)) \n",
-    "                          for j in range(len(img_patches_te[i]))])\n",
-    "        gt_patches_tr =  np.asarray([gt_patches_tr[i][j] \n",
-    "                          for i in range(len(gt_patches_tr)) \n",
-    "                          for j in range(len(gt_patches_tr[i]))])\n",
-    "        gt_patches_te =  np.asarray([gt_patches_te[i][j] \n",
-    "                          for i in range(len(gt_patches_te)) \n",
-    "                          for j in range(len(gt_patches_te[i]))])\n",
+    "        im_tr = np.asarray([im_tr[i][j] \n",
+    "                          for i in range(len(im_tr)) \n",
+    "                          for j in range(len(im_tr[i]))])\n",
+    "        im_te = np.asarray([im_te[i][j] \n",
+    "                          for i in range(len(im_te)) \n",
+    "                          for j in range(len(im_te[i]))])\n",
+    "        gt_tr =  np.asarray([gt_tr[i][j] \n",
+    "                          for i in range(len(gt_tr)) \n",
+    "                          for j in range(len(gt_tr[i]))])\n",
+    "        gt_te =  np.asarray([gt_te[i][j] \n",
+    "                          for i in range(len(gt_te)) \n",
+    "                          for j in range(len(gt_te[i]))])\n",
     "        \n",
-    "        im_patches_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_patches_tr))]\n",
-    "        im_patches_te=[extract_features(im_patches_te[i]) for i in range(len(im_patches_te))]\n",
+    "        im_tr=[extract_features(im_patches_tr[i]) for i in range(len(im_tr))]\n",
+    "        im_te=[extract_features(im_patches_te[i]) for i in range(len(im_te))]\n",
     "\n",
-    "        X_tr = np.asarray([poly_features(im_patches_tr[i],deg) for i in range(len(im_patches_tr))])\n",
-    "        Y_tr = np.asarray([value_to_class(np.mean(gt_patches_tr[i])) for i in range(len(gt_patches_tr))])\n",
+    "        im_tr = np.asarray([poly_features(im_tr[i],deg) for i in range(len(im_tr))])\n",
+    "        gt_tr = np.asarray([value_to_class(np.mean(gt_tr[i])) for i in range(len(gt_tr))])\n",
     "        \n",
-    "        X_te = np.asarray([poly_features(im_patches_te[i],deg) for i in range(len(im_patches_te))])\n",
-    "        Y_te = np.asarray([value_to_class(np.mean(gt_patches_te[i])) for i in range(len(gt_patches_te))])\n",
+    "        im_te = np.asarray([poly_features(im_te[i],deg) for i in range(len(im_te))])\n",
+    "        gt_te = np.asarray([value_to_class(np.mean(gt_te[i])) for i in range(len(gt_te))])\n",
     "        \n",
     "        logreg = linear_model.LogisticRegression(C=lam, class_weight=\"balanced\")\n",
-    "        logreg.fit(X_tr, Y_tr)\n",
+    "        logreg.fit(im_tr, gt_tr)\n",
     "\n",
-    "        Z_te = logreg.predict(X_te)\n",
+    "        Z_te = logreg.predict(im_te)\n",
     "\n",
     "        Z_pp=[]\n",
-    "        for i in range(len(gt_patches_te)):\n",
+    "        for i in range(len(gt_te)):\n",
     "            Z_pp = Z_pp + post_processing(Z_te[i*625:(i+1)*625],18,9,3,3,25)\n",
     "            \n",
-    "        nb_f1_te[ind]=compute_F1(Y_te, Z_pp)\n",
+    "        nb_f1_te[ind]=compute_F1(gt_te, Z_pp)\n",
     "        print(nb_f1_te[ind])\n",
     "        \n",
     "    mean_f1[id_lam]=nb_f1_te.mean()\n",
@@ -129,17 +160,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5 6 7]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a=np.arange(1,8)\n",
     "print(a)"
